Chanaged api, now using APIXU.com for https and added async xmlhttp request

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Weather Forecast</title>
+        <title>WeatherXU</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,16 +23,16 @@
     </head>
     <body>
         <div id="landing">
-            <h1>Weather Forecast</h1>
+            <h1>WeatherXU</h1>
         </div>
 
         <div class="pure-g header">
-            <div class="pure-u-1"><h2>Weather Forecast</h2></div>
+            <div class="pure-u-1"><h2>WeatherXU</h2></div>
         </div>
         <div class="pure-g info">
             <div class="pure-u-2-3">
-                <h1>Enter a zip code!</h1>
-                <input id="user_input" type="text">
+                <h1>Enter your location!</h1>
+                <input id="user_input" type="text" placeholder="zip code">
                 <button id="subBtn" type="button">Submit</button>
             </div>
         </div>
